# dfttest

./: CMakeLists.txt  README.md  dfttest - README.txt  dfttest.slnx
dfttest/: CMakeLists.txt  PlanarFrame.cpp  PlanarFrame.h  dfttest.cpp  dfttest.h  dfttest.rc  dfttest.vcxproj  dfttest_avx.cpp  dfttest_avx.h  dfttest_avx2.cpp  dfttest_avx2.h
